--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,13 +2,22 @@ body {
 	margin: 0;
 	padding: 0;
 }
+tbody {
+	top:50px;
+	left:50px;
+	position: absolute;
+}
 td {
 	background-color: #525252;
-	width: 70px;
-	height: 70px;
+	width: 50px;
+	height: 50px;
 	padding: 0;
 }
 
 td.white {
 	background-color: #BABABA;
+}
+
+.piece {
+	position:absolute;
 }
