Starting of interaction window

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,3 +21,15 @@ td.white {
 .piece {
 	position:absolute;
 }
+
+
+#board-div {
+	float: left;
+}
+
+#interaction-window {
+	float: right;
+	margin-top: 20px;
+	margin-right: 20px;
+	width: 600px;
+}
