--- a/static/templates/interactionWindow/gameRequest.html
+++ b/static/templates/interactionWindow/gameRequest.html
@@ -1,4 +1,5 @@
-<h3><%=opponent.Username%> would like to play you. Do you accept?</h3>
-<h5><%=opponent.Username%> is <% if (opponent.IsAi) { %>an AI<% } else { %> a real person <% } %></h5>
+<h3><%=opponent.username%> would like to play you. Do you accept?</h3>
+<h5><%=opponent.username%> is <% if (opponent.is_ai) { %>an AI<% } else { %> a real person <% } %></h5>
+<h5><%=opponent.username%> has a rank of <%=opponent.current_rank%></h5> 
 <button id="game-accept" type="button">Accept</button>
 <button id="game-deny" type="button">Deny</button>
