more jiggery pokery with the css. Also added bootstrap css, which makes things look a bit nicer.

--- a/static/templates/interactionWindow/loginForm.html
+++ b/static/templates/interactionWindow/loginForm.html
@@ -9,3 +9,23 @@
 <br />
 <a href="#" id="i-want-to-register">Register</a>
 </form>
+
+<!-- <table>
+		<tr>
+			<td><label for="username">Username</label></td>
+			<td><input type="text" name="username"></td>
+		</tr>
+		<tr>
+			<td><label for="password">Password</label></td>
+			<td><input type="password" name="password"></td>
+		</tr>
+		<tr>
+			<td><button type="submit" id="login-button">Login!</button></td>
+		</tr>
+		<tr>
+			<td><a href="#" id="i-want-to-register">Register</a></td>
+		</tr>
+		
+		
+		
+	</table> -->
