--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,6 +13,7 @@ td {
 	width: 50px;
 	height: 50px;
 	padding: 0;
+	margin: 1px;
 }
 
 td.white {
@@ -22,23 +23,23 @@ td.white {
 .piece {
 	position:absolute;
 	/*position:absolute;*/
-	width:54px;
+	width:52px;
 }
 
 
 #board-div {
 	float: left;
-	margin-left: 1em;
-	/*margin-top: 20px;*/
+	/*margin-left: 1em;*/
+	margin-top: 1px;
 	position:relative;
 	width:500px;
 }
 
 #interaction-window {
 	float: left;
-	margin-top: 20px;
+	margin-top: 55px;
 	margin-right: 20px;
-	width: 250px;
+	width: 300px;
 }
 
 td.highlight {
@@ -48,14 +49,14 @@ td.highlight {
 #chat-history {
 	margin-top: 2em;
 	overflow-y: scroll;
-	height: 400px;
+	height: 280px;
 }
 
 #currentColor {
 	/*position: relative;*/
-	float: right;
+	/*float: right;*/
 	margin-right: 20px;
-	/*margin-top: 30px;*/
+	margin-top: 30px;
 	/*width: 600px;*/
 }
 
@@ -64,7 +65,7 @@ td.highlight {
 	margin-top: 5px;
 	margin: 0 auto;
 	background-color: white;
-	height: 35em;
+	height: 40em;
 	width: 68em;
 }
 
@@ -81,6 +82,11 @@ td.highlight {
 
 label {
 	padding: 5px;
+}
+
+.logo {
+	width: 25px;
+	height: 50px;
 }
 
 /*#interaction-window img {
