--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@ body {
 	background-color: #CCCCCC;
 }
 tbody {
-	top:50px;
+	top:20px;
 	left:50px;
 	position: absolute;
 }
@@ -37,7 +37,7 @@ td.white {
 
 #interaction-window {
 	float: left;
-	margin-top: 55px;
+	margin-top: 20px;
 	margin-right: 20px;
 	width: 300px;
 }
@@ -55,9 +55,10 @@ td.highlight {
 #currentColor {
 	/*position: relative;*/
 	/*float: right;*/
-	margin-right: 20px;
-	margin-top: 30px;
+	/*margin-right: 20px;*/
+	margin-top: 5px;
 	/*width: 600px;*/
+	text-align: center;
 }
 
 #container {
