--- a/static/templates/interactionWindow/loading.html
+++ b/static/templates/interactionWindow/loading.html
@@ -1,4 +1,4 @@
-<img src="img/loading.gif" />
+<img src="img/loading.gif" class="center-block"/>
 <% if (typeof(msg) != "undefined") { %>
-<br><h3><%=msg%></h3>
+<br><h4 class="text-center"><%=msg%></h4>
 <% } %>
