--- a/static/templates/interactionWindow/registerForm.html
+++ b/static/templates/interactionWindow/registerForm.html
@@ -1,12 +1,25 @@
 <% if (typeof(error) != "undefined") { %>
-<h3><%=error%></h3>
+<div class="panel panel-danger user-form center-block">
+	<div class="panel-heading">
+	<h5 class="text-center"><%=error%></h5>
+	</div>
+</div>
 <% } %>
 
-<form id="register-form">
-<label for="username">Username</label><input type="text" name="username"><br />
-<label for="password">Password</label><input type="password" name="password"><br />
-<input type="checkbox" name="verseai">I am happy to play AI players</input><br>
-<button type="submit" id="register-button">Register</button>
-<br />
-<a href="#" id="i-want-to-login">Log in</a>
+<form id="register-form" class="center-block user-form">
+	<div class="form-group">
+		<input type="email" class="form-control" name="username" placeholder="username">
+	</div>
+	<div class="form-group">
+		<input type="password" name="password" class="form-control" placeholder="password">
+	</div>
+
+	<div class="checkbox">
+		<label>
+			<input type="checkbox" name="verseai">I am happy to play AI players
+		</label>
+	</div>
+
+	<button type="submit" id="register-button" class="btn btn-primary">Register</button>
+	<button type="button" id="i-want-to-login" class="btn btn-link">Login</button>
 </form>
